src/main/java/org/example/HomeWork/N17/TestDemo.java
package org.example.HomeWork.N17;

public class TestDemo {
    public static void main(String[] args) {
//        RuntimesErrorTest.test1(4,5);//error
        RuntimesErrorTest.test1(5);//ok
    }
}
